ansible-playbook/ansible_collections/giftpilz0/homelab/roles/bumper/templates/bumper-pod/config/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8007
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com.envoy.extensions.access_loggers.stdout.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: bumper
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_https
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
      filter_chains:
        - tls_context:
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
                tls_maximum_protocol_version: TLSv1_3
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_https
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com.envoy.extensions.access_loggers.stdout.v3.StdoutAccessLog
                route_config:
                  name: local_route_https
                  virtual_hosts:
                    - name: local_service_https
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: bumper
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    - name: listener_mqtt
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1883
      filter_chains:
        - filters:
            - name: envoy.filters.network.mqtt_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.mqtt_proxy.v3.MqttProxy
                stat_prefix: mqtt
                upstream:
                  cluster: bumper_mqtt

    - name: listener_mqtts
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 443
      filter_chains:
        - tls_context:
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_2
              alpn_protocols:
                - mqtt
          filters:
            - name: envoy.filters.network.mqtt_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.mqtt_proxy.v3.MqttProxy
                stat_prefix: mqtts
                upstream:
                  cluster: bumper_mqtt

  clusters:
    - name: bumper
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: bumper
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8007

    - name: bumper_mqtt
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: bumper_mqtt
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 1883
